# Conman

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 176794d2e8e5_create_users_table.py  59d1a621d7ce_added_ingestion_head.py  7bd07dae6188_acreated_chatmessage_and_chatsession_.py  8acd00c59a23_added_username_and_api_key_to_users.py  b3fb426ff74e_added_ingestion_head_with_constraints_.py
app/: client_test.py  main.py
app/config/: development.py  settings.py
app/config/services/: base.py  cognitive.py  database.py  weaviate.py
app/conn/: clients.py  localsession.py  postgre_conn.py  weaviate_client.py
app/core/factory/: vectorizer_api.py  vectorizer_local.py
app/core/factory/api/: emotion_api.py  reranker_api.py  vectorizer_api.py
app/core/factory/local/: emotions_local.py  (+1 more)
app/core/strategy/: chunker.py  congnitive_reranker.py  get_emotions.py  memory_formatter.py  memory_retriever.py  memory_sim.py  recall.py  toolcheck.py
app/core/weaviate/: schema.py
app/data_pipeline/: ingestMessage.py  insert_to_db.py  push_to_weaviate.py
app/data_pipeline/helper/: helperHead.py  helperOnnx.py
app/db/: engine_async.py  insert_dummy.py
app/db/models/: __init__.py  chatmessage.py  chatsession.py  ingestion_head.py  user.py
app/schemas/: db_models.py  emotion_schema.py  inference_schema.py  rerank_schema.py  vec_text_input.py  vectorize_schema.py
app/shared/: logger.py
docker/: Dockerfile.ollama  Dockerfile.vectorizer  docker-compose.yml  start.sh
tests/: test_retrieval.py
(+1 files in other folders)
