[project]
name = "conman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "asyncpg",
    "alembic",
    "sqlalchemy[asyncio]",
    "psycopg2-binary",
    "langchain",
    "langchain-experimental",
    "optimum[onnxruntime]",
    "weaviate-client",
    "uvicorn",
    "sentence-transformers",
    "tqdm"
]
